Prevent horizontal scrolling from YouTube embeds
Closes #8

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -98,6 +98,9 @@ p {
 .prose p {
   margin-bottom: 2em;
 }
+iframe {
+  max-width: 100%;
+}
 textarea {
   width: 100%;
   font-size: 16px;
